externals/bcplusparser/src/bcplus/parser/detail/Scanner.2.cpp
/* Generated by re2c 0.13.5 on Fri Feb 10 02:16:45 2017 */
#line 1 "bcplus/parser/detail/Scanner.2.re2c"

#include <sstream>

#include <boost/filesystem.hpp>
#include <boost/filesystem/fstream.hpp>

#include "bcplus/parser/detail/Scanner.h"
#include "bcplus/parser/detail/lemon_parser.h"

#include "bcplus/Location.h"
#include "bcplus/parser/Token.h"

#include "bcplus/parser/detail/ScannerSource.h"
#include "bcplus/parser/detail/ScannerRawSource.h"
#include "bcplus/parser/detail/ScannerTokenSource.h"
#include "bcplus/parser/detail/ScannerFileSource.h"
#include "bcplus/parser/detail/ScannerBufferSource.h"

namespace u = babb::utils;
namespace fs = boost::filesystem;

namespace bcplus {
namespace parser {
namespace detail {

Token* Scanner::tokenize_2(ScannerRawSource* source) {
	if (source->eof()) return new Token(T_EOF, new ReferencedString("<EOF>"), source->loc(), source->loc());
	else if (!source->good()) return new Token(T_ERR_IO, new ReferencedString("<IO ERROR>"), source->loc(), source->loc());


	int ret;
	Location begin;

	begin = source->loc();
	source->token() = source->cursor();



	if (_cond == yycNORMAL) {
			
#line 44 "<stdout>"
{
	char yych;
	unsigned int yyaccept = 0;
	goto yyc_NORMAL;
/* *********************************** */
yyc_NORMAL:
	{
		static const unsigned char yybm[] = {
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0, 128,   0, 128, 128,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			128,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
		};

		if ((source->limit() - source->cursor()) < 21) source->fill(21);
		yych = *source->cursor();
		if (yych <= 'k') {
			if (yych <= 'c') {
				if (yych <= '`') {
					if (yych != '\n') goto yy2_3;
				} else {
					if (yych <= 'a') goto yy2_5;
					if (yych <= 'b') goto yy2_6;
					goto yy2_7;
				}
			} else {
				if (yych <= 'f') {
					if (yych <= 'd') goto yy2_8;
					if (yych <= 'e') goto yy2_9;
					goto yy2_10;
				} else {
					if (yych <= 'g') goto yy2_3;
					if (yych <= 'h') goto yy2_11;
					if (yych <= 'i') goto yy2_12;
					goto yy2_3;
				}
			}
		} else {
			if (yych <= 'q') {
				if (yych <= 'n') {
					if (yych <= 'l') goto yy2_13;
					if (yych <= 'm') goto yy2_14;
					goto yy2_15;
				} else {
					if (yych <= 'o') goto yy2_16;
					if (yych <= 'p') goto yy2_17;
					goto yy2_18;
				}
			} else {
				if (yych <= 't') {
					if (yych <= 'r') goto yy2_19;
					if (yych <= 's') goto yy2_20;
					goto yy2_21;
				} else {
					if (yych <= 'u') goto yy2_22;
					if (yych <= 'v') goto yy2_23;
					if (yych <= 'w') goto yy2_24;
					goto yy2_3;
				}
			}
		}
yy2_2:
		source->cursor() = source->marker();
		if (yyaccept <= 0) {
			goto yy2_4;
		} else {
			goto yy2_512;
		}
yy2_3:
		++source->cursor();
yy2_4:
#line 131 "bcplus/parser/detail/Scanner.2.re2c"
		{ goto re2c_notkw; }
#line 146 "<stdout>"
yy2_5:
		yyaccept = 0;
		yych = *(source->marker() = ++source->cursor());
		switch (yych) {
		case 'b':	goto yy2_456;
		case 'c':	goto yy2_462;
		case 'd':	goto yy2_461;
		case 'f':	goto yy2_460;
		case 'l':	goto yy2_458;
		case 's':	goto yy2_459;
		case 't':	goto yy2_457;
		default:	goto yy2_4;
		}
yy2_6:
		yyaccept = 0;
		yych = *(source->marker() = ++source->cursor());
		if (yych == 'y') goto yy2_453;
		goto yy2_4;
yy2_7:
		yyaccept = 0;
		yych = *(source->marker() = ++source->cursor());
		if (yych == 'a') goto yy2_409;
		if (yych == 'o') goto yy2_408;
		goto yy2_4;
yy2_8:
		yyaccept = 0;
		yych = *(source->marker() = ++source->cursor());
		if (yych == '/') goto yy2_385;
		if (yych == 'e') goto yy2_386;
		goto yy2_4;
yy2_9:
		yyaccept = 0;
		yych = *(source->marker() = ++source->cursor());
		if (yych == 'q') goto yy2_342;
		if (yych == 'x') goto yy2_343;
		goto yy2_4;
yy2_10:
		yyaccept = 0;
		yych = *(source->marker() = ++source->cursor());
		if (yych == 'a') goto yy2_336;
		goto yy2_4;
yy2_11:
		yyaccept = 0;
		yych = *(source->marker() = ++source->cursor());
		if (yych == 'i') goto yy2_331;
		goto yy2_4;
yy2_12:
		yyaccept = 0;
		yych = *(source->marker() = ++source->cursor());
		if (yych <= 'l') {
			if (yych == 'f') goto yy2_280;
			goto yy2_4;
		} else {
			if (yych <= 'm') goto yy2_279;
			if (yych <= 'n') goto yy2_278;
			goto yy2_4;
		}
yy2_13:
		yyaccept = 0;
		yych = *(source->marker() = ++source->cursor());
		if (yych == 'a') goto yy2_272;
		goto yy2_4;
yy2_14:
		yyaccept = 0;
		yych = *(source->marker() = ++source->cursor());
		if (yych == 'a') goto yy2_224;
		if (yych == 'o') goto yy2_223;
		goto yy2_4;
yy2_15:
		yyaccept = 0;
		yych = *(source->marker() = ++source->cursor());
		if (yych == 'e') goto yy2_185;
		if (yych == 'o') goto yy2_184;
		goto yy2_4;
yy2_16:
		yyaccept = 0;
		yych = *(source->marker() = ++source->cursor());
		if (yych == 'b') goto yy2_166;
		if (yych == 'f') goto yy2_165;
		goto yy2_4;
yy2_17:
		yyaccept = 0;
		yych = *(source->marker() = ++source->cursor());
		if (yych == 'o') goto yy2_148;
		goto yy2_4;
yy2_18:
		yyaccept = 0;
		yych = *(source->marker() = ++source->cursor());
		if (yych == 'u') goto yy2_142;
		goto yy2_4;
yy2_19:
		yyaccept = 0;
		yych = *(source->marker() = ++source->cursor());
		if (yych == 'e') goto yy2_132;
		if (yych == 'i') goto yy2_131;
		goto yy2_4;
yy2_20:
		yyaccept = 0;
		yych = *(source->marker() = ++source->cursor());
		switch (yych) {
		case 'd':	goto yy2_59;
		case 'h':	goto yy2_61;
		case 'i':	goto yy2_58;
		case 'o':	goto yy2_60;
		case 't':	goto yy2_57;
		default:	goto yy2_4;
		}
yy2_21:
		yyaccept = 0;
		yych = *(source->marker() = ++source->cursor());
		if (yych == 'a') goto yy2_49;
		if (yych == 'r') goto yy2_48;
		goto yy2_4;
yy2_22:
		yyaccept = 0;
		yych = *(source->marker() = ++source->cursor());
		if (yych == 'n') goto yy2_41;
		goto yy2_4;
yy2_23:
		yyaccept = 0;
		yych = *(source->marker() = ++source->cursor());
		if (yych == 'a') goto yy2_31;
		goto yy2_4;
yy2_24:
		yyaccept = 0;
		yych = *(source->marker() = ++source->cursor());
		if (yych != 'h') goto yy2_4;
		yych = *++source->cursor();
		if (yych != 'e') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'r') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'e') goto yy2_2;
		source->ctxmarker() = source->cursor() + 1;
		yych = *++source->cursor();
		if (yych <= '@') goto yy2_29;
		if (yych <= 'Z') goto yy2_2;
		if (yych <= '`') goto yy2_29;
		if (yych <= 'z') goto yy2_2;
yy2_29:
		++source->cursor();
		source->cursor() = source->ctxmarker();
#line 119 "bcplus/parser/detail/Scanner.2.re2c"
		{ ret = T_WHERE;						goto re2c_finish;					}
#line 291 "<stdout>"
yy2_31:
		yych = *++source->cursor();
		if (yych != 'r') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'i') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'a') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'b') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'l') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'e') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 's') goto yy2_2;
		source->ctxmarker() = source->cursor() + 1;
		yych = *++source->cursor();
		if (yych <= '@') goto yy2_39;
		if (yych <= 'Z') goto yy2_2;
		if (yych <= '`') goto yy2_39;
		if (yych <= 'z') goto yy2_2;
yy2_39:
		++source->cursor();
		source->cursor() = source->ctxmarker();
#line 65 "bcplus/parser/detail/Scanner.2.re2c"
		{ ret = T_VARIABLES;					goto re2c_finish;					}
#line 318 "<stdout>"
yy2_41:
		yych = *++source->cursor();
		if (yych != 'l') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'e') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 's') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 's') goto yy2_2;
		source->ctxmarker() = source->cursor() + 1;
		yych = *++source->cursor();
		if (yych <= '@') goto yy2_46;
		if (yych <= 'Z') goto yy2_2;
		if (yych <= '`') goto yy2_46;
		if (yych <= 'z') goto yy2_2;
yy2_46:
		++source->cursor();
		source->cursor() = source->ctxmarker();
#line 118 "bcplus/parser/detail/Scanner.2.re2c"
		{ ret = T_UNLESS;						goto re2c_finish;					}
#line 339 "<stdout>"
yy2_48:
		yych = *++source->cursor();
		if (yych == 'u') goto yy2_53;
		goto yy2_2;
yy2_49:
		yych = *++source->cursor();
		if (yych != 'n') goto yy2_2;
		source->ctxmarker() = source->cursor() + 1;
		yych = *++source->cursor();
		if (yych <= '@') goto yy2_51;
		if (yych <= 'Z') goto yy2_2;
		if (yych <= '`') goto yy2_51;
		if (yych <= 'z') goto yy2_2;
yy2_51:
		++source->cursor();
		source->cursor() = source->ctxmarker();
#line 90 "bcplus/parser/detail/Scanner.2.re2c"
		{ ret = T_TAN;						goto re2c_finish;					}
#line 358 "<stdout>"
yy2_53:
		yych = *++source->cursor();
		if (yych != 'e') goto yy2_2;
		source->ctxmarker() = source->cursor() + 1;
		yych = *++source->cursor();
		if (yych <= '@') goto yy2_55;
		if (yych <= 'Z') goto yy2_2;
		if (yych <= '`') goto yy2_55;
		if (yych <= 'z') goto yy2_2;
yy2_55:
		++source->cursor();
		source->cursor() = source->ctxmarker();
#line 127 "bcplus/parser/detail/Scanner.2.re2c"
		{ ret = T_TRUE;							goto re2c_finish;					}
#line 373 "<stdout>"
yy2_57:
		yych = *++source->cursor();
		if (yych == 'r') goto yy2_94;
		goto yy2_2;
yy2_58:
		yych = *++source->cursor();
		if (yych <= 'l') goto yy2_2;
		if (yych <= 'm') goto yy2_80;
		if (yych <= 'n') goto yy2_79;
		goto yy2_2;
yy2_59:
		yych = *++source->cursor();
		if (yych == 'F') goto yy2_71;
		goto yy2_2;
yy2_60:
		yych = *++source->cursor();
		if (yych == 'r') goto yy2_66;
		goto yy2_2;
yy2_61:
		yych = *++source->cursor();
		if (yych != 'o') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'w') goto yy2_2;
		source->ctxmarker() = source->cursor() + 1;
		yych = *++source->cursor();
		if (yych <= '@') goto yy2_64;
		if (yych <= 'Z') goto yy2_2;
		if (yych <= '`') goto yy2_64;
		if (yych <= 'z') goto yy2_2;
yy2_64:
		++source->cursor();
		source->cursor() = source->ctxmarker();
#line 62 "bcplus/parser/detail/Scanner.2.re2c"
		{ ret = T_SHOW;							goto re2c_finish;					}
#line 408 "<stdout>"
yy2_66:
		yych = *++source->cursor();
		if (yych != 't') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 's') goto yy2_2;
		source->ctxmarker() = source->cursor() + 1;
		yych = *++source->cursor();
		if (yych <= '@') goto yy2_69;
		if (yych <= 'Z') goto yy2_2;
		if (yych <= '`') goto yy2_69;
		if (yych <= 'z') goto yy2_2;
yy2_69:
		++source->cursor();
		source->cursor() = source->ctxmarker();
#line 64 "bcplus/parser/detail/Scanner.2.re2c"
		{ ret = T_SORTS;						goto re2c_finish;					}
#line 425 "<stdout>"
yy2_71:
		yych = *++source->cursor();
		if (yych != 'l') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'u') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'e') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'n') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 't') goto yy2_2;
		source->ctxmarker() = source->cursor() + 1;
		yych = *++source->cursor();
		if (yych <= '@') goto yy2_77;
		if (yych <= 'Z') goto yy2_2;
		if (yych <= '`') goto yy2_77;
		if (yych <= 'z') goto yy2_2;
yy2_77:
		++source->cursor();
		source->cursor() = source->ctxmarker();
#line 112 "bcplus/parser/detail/Scanner.2.re2c"
		{ ret = T_SDFLUENT;						goto re2c_finish;					}
#line 448 "<stdout>"
yy2_79:
		source->ctxmarker() = source->cursor() + 1;
		yych = *++source->cursor();
		if (yych <= '@') goto yy2_92;
		if (yych <= 'Z') goto yy2_2;
		if (yych <= '`') goto yy2_92;
		if (yych <= 'z') goto yy2_2;
		goto yy2_92;
yy2_80:
		yych = *++source->cursor();
		if (yych != 'p') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'l') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'e') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'F') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'l') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'u') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'e') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'n') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 't') goto yy2_2;
		source->ctxmarker() = source->cursor() + 1;
		yych = *++source->cursor();
		if (yych <= '@') goto yy2_90;
		if (yych <= 'Z') goto yy2_2;
		if (yych <= '`') goto yy2_90;
		if (yych <= 'z') goto yy2_2;
yy2_90:
		++source->cursor();
		source->cursor() = source->ctxmarker();
#line 113 "bcplus/parser/detail/Scanner.2.re2c"
		{ ret = T_SIMPLEFLUENT;					goto re2c_finish;					}
#line 487 "<stdout>"
yy2_92:
		++source->cursor();
		source->cursor() = source->ctxmarker();
#line 88 "bcplus/parser/detail/Scanner.2.re2c"
		{ ret = T_SIN;						goto re2c_finish;					}
#line 493 "<stdout>"
yy2_94:
		yych = *++source->cursor();
		if (yych != 'o') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'n') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'g') goto yy2_2;
		yych = *++source->cursor();
		if (yych == '_') goto yy2_100;
		if (yych == 'n') goto yy2_2;
		goto yy2_99;
yy2_98:
		++source->cursor();
		if ((source->limit() - source->cursor()) < 14) source->fill(14);
		yych = *source->cursor();
yy2_99:
		if (yybm[0+yych] & 128) {
			goto yy2_98;
		}
		if (yych == 'n') goto yy2_116;
		goto yy2_2;
yy2_100:
		yych = *++source->cursor();
		if (yych != 'n') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'o') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'c') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'o') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'n') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'c') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'u') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'r') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'r') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'e') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'n') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'c') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'y') goto yy2_2;
		source->ctxmarker() = source->cursor() + 1;
		yych = *++source->cursor();
		if (yych <= '@') goto yy2_114;
		if (yych <= 'Z') goto yy2_2;
		if (yych <= '`') goto yy2_114;
		if (yych <= 'z') goto yy2_2;
yy2_114:
		++source->cursor();
		source->cursor() = source->ctxmarker();
#line 115 "bcplus/parser/detail/Scanner.2.re2c"
		{ ret = T_STRONG_NOCONCURRENCY;			goto re2c_finish;					}
#line 553 "<stdout>"
yy2_116:
		yych = *++source->cursor();
		if (yych != 'o') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'c') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'o') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'n') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'c') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'u') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'r') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'r') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'e') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'n') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'c') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'y') goto yy2_2;
		source->ctxmarker() = source->cursor() + 1;
		yych = *++source->cursor();
		if (yych <= '@') goto yy2_129;
		if (yych <= 'Z') goto yy2_2;
		if (yych <= '`') goto yy2_129;
		if (yych <= 'z') goto yy2_2;
yy2_129:
		++source->cursor();
		source->cursor() = source->ctxmarker();
#line 114 "bcplus/parser/detail/Scanner.2.re2c"
		{ ret = T_STRONG_NOCONCURRENCY;			goto re2c_finish;					}
#line 590 "<stdout>"
yy2_131:
		yych = *++source->cursor();
		if (yych == 'g') goto yy2_137;
		goto yy2_2;
yy2_132:
		yych = *++source->cursor();
		if (yych != 'a') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'l') goto yy2_2;
		source->ctxmarker() = source->cursor() + 1;
		yych = *++source->cursor();
		if (yych <= '@') goto yy2_135;
		if (yych <= 'Z') goto yy2_2;
		if (yych <= '`') goto yy2_135;
		if (yych <= 'z') goto yy2_2;
yy2_135:
		++source->cursor();
		source->cursor() = source->ctxmarker();
#line 109 "bcplus/parser/detail/Scanner.2.re2c"
		{ ret = T_REAL;						goto re2c_finish;					}
#line 611 "<stdout>"
yy2_137:
		yych = *++source->cursor();
		if (yych != 'i') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'd') goto yy2_2;
		source->ctxmarker() = source->cursor() + 1;
		yych = *++source->cursor();
		if (yych <= '@') goto yy2_140;
		if (yych <= 'Z') goto yy2_2;
		if (yych <= '`') goto yy2_140;
		if (yych <= 'z') goto yy2_2;
yy2_140:
		++source->cursor();
		source->cursor() = source->ctxmarker();
#line 111 "bcplus/parser/detail/Scanner.2.re2c"
		{ ret = T_RIGID;						goto re2c_finish;					}
#line 628 "<stdout>"
yy2_142:
		yych = *++source->cursor();
		if (yych != 'e') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'r') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'y') goto yy2_2;
		source->ctxmarker() = source->cursor() + 1;
		yych = *++source->cursor();
		if (yych <= '@') goto yy2_146;
		if (yych <= 'Z') goto yy2_2;
		if (yych <= '`') goto yy2_146;
		if (yych <= 'z') goto yy2_2;
yy2_146:
		++source->cursor();
		source->cursor() = source->ctxmarker();
#line 61 "bcplus/parser/detail/Scanner.2.re2c"
		{ ret = T_QUERY;						goto re2c_finish;					}
#line 647 "<stdout>"
yy2_148:
		yych = *++source->cursor();
		if (yych != 's') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 's') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'i') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'b') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'l') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'y') goto yy2_2;
		yych = *++source->cursor();
		if (yych == 'c') goto yy2_2;
		goto yy2_156;
yy2_155:
		++source->cursor();
		if ((source->limit() - source->cursor()) < 7) source->fill(7);
		yych = *source->cursor();
yy2_156:
		if (yych <= '\f') {
			if (yych == '\t') goto yy2_155;
			if (yych <= '\n') goto yy2_2;
			goto yy2_155;
		} else {
			if (yych <= ' ') {
				if (yych <= 0x1F) goto yy2_2;
				goto yy2_155;
			} else {
				if (yych != 'c') goto yy2_2;
			}
		}
		yych = *++source->cursor();
		if (yych != 'a') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'u') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 's') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'e') goto yy2_2;
		yych = *++source->cursor();
